# better-rag

./: .gitignore  Chatting.py  Indexing.py  Job.py  main.py  pyproject.toml  requirements.txt
data/: TestData.txt
llm/: Agent.py  Chain.py  Embedding.py  LLM.py  Tools.py  Vectorstore.py  utils.py
pages/: AdIndexing.py  AgenticRAG.py  FusionRAG.py  Home.py  QueryIndex.py  SimpleRAG.py  VectorPreview.py
vectorstores/Novel.faiss/: index.faiss  index.pkl
vectorstores/VN-History.faiss/: index.faiss  index.pkl
