[project]
name = "better-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cohere>=5.15.0",
    "faiss-cpu>=1.11.0",
    "fastmcp>=2.6.1",
    "haystack>=0.42",
    "langchain>=0.3.25",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.2.0",
    "langchain-mcp-adapters>=0.1.4",
    "langchain-openai>=0.3.19",
    "langchain-unstructured>=0.1.6",
    "neo4j>=5.28.1",
    "pdfminer-six>=20250506",
    "rank-bm25>=0.2.2",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.1",
    "tiktoken>=0.9.0",
    "unstructured[pdf]>=0.17.2",
]
